--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "single-product-landingpage",
+  "name": "ecommercelandingpage",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -10,10 +10,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@tailwindcss/vite": "^4.1.18",
+    "@tailwindcss/vite": "^4.1.17",
+    "framer-motion": "^12.23.25",
+    "lucide": "^0.555.0",
+    "lucide-react": "^0.555.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
-    "tailwindcss": "^4.1.18"
+    "tailwindcss": "^4.1.17"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
